--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://img.freepik.com/free-vector/skype-vector-social-media-icon-7-june-2021-bangkok-thailand_53876-128357.jpg?size=626&ext=jpg&ga=GA1.1.1573020042.1694699884&semt=sph" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The Siren</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
